standard-action@v1.0.3 has been archived

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,18 +23,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: StandardJS lint checks
-      # You may pin to the exact commit or the version.
-      # uses: goto-bus-stop/standard-action@ff0a0b317330647e4e1ace3fd00d3b41630c8955
-        uses: goto-bus-stop/standard-action@v1.0.3
-        with:
-          # Globs to lint.
-  #           files: # optional
-          # Output format style, see https://eslint.org/docs/user-guide/formatters/. Default `stylish`.
-#           version: # default is stylish
-          # Standard-compatible linter variant to use. ex. semistandard, happiness, doublestandard...
-#           linter: # default is standard
-          # Annotate the diff UI with lint errors. Requires passing in env.GITHUB_TOKEN.
-          annotate: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      - uses: actions/checkout@v2
+      # This sets up a "problem matcher" for eslint and standard
+      - uses: actions/setup-node@v2
+      # Now you can just run eslint or standard yourself
+      - run: npx standard
 
