--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# This action checks out the commit that triggered the action and runs standardjs
+# If there are linting errors it exits with a failure
+# otherwise it exists with success
 
 name: linter
 
@@ -15,8 +17,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "lint"
+  lint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,7 +26,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup node
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+      - name: Setup node # Allows us to run npx command
         uses: actions/setup-node@v2
         # Now you can just run eslint or standard yourself
       - name: StandardJS lint checks
