--- a/.github/workflows/linter-with-autofix.yml
+++ b/.github/workflows/linter-with-autofix.yml
@@ -22,6 +22,8 @@ jobs:
   lint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,8 +40,6 @@ jobs:
           npx standard --fix || true
           git diff --exit-code
           echo "::set-output name=has_changes::$?"
-        # opt out of fail-fast behaviour
-        shell: bash
       - name: Commit files
         id: commit
         # git diff sets exit code to 1 if there are differences
