--- a/.github/workflows/postman-runner.yml
+++ b/.github/workflows/postman-runner.yml
@@ -23,9 +23,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout code
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       # Install Node.js environment
       - name: set up node
       - uses: actions/setup-node@v2
