--- a/.github/workflows/postman-runner.yml
+++ b/.github/workflows/postman-runner.yml
@@ -1,6 +1,6 @@
 # This is a workflow to exemplify how to run a postman collection
 
-name: Postman runner
+name: postman_runner
 
 # Controls when the workflow will run
 on:
@@ -24,11 +24,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       # Install Node.js environment
       - name: set up node
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
 
