--- a/.github/workflows/postman-runner.yml
+++ b/.github/workflows/postman-runner.yml
@@ -25,6 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: 'example_2_postman' #Forces it to always checkout code from branch that contains postman file
 
       # Install Node.js environment
       - name: set up node
