--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -27,3 +27,5 @@ jobs:
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: auth
