--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -16,16 +16,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  security:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Snyk
-        # You may pin to the exact commit or the version.
-        # uses: snyk/actions@7fad562681122205233d1242c3bb39598c5393da
-        uses: snyk/actions@0.3.0
-        with:
-          # Which Snyk command to run, defaults to test
-          command: test
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
