--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 16.x
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup Node.js 16.x
       uses: actions/setup-node@v2
       with:
         node-version: 16.x
