--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,25 +1,23 @@
-name: Snyk
+name: Snyk security analysis
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push for this branch
   push:
     branches: [ example_3_snyk ]
-
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  security:
+  # This workflow contains a single job called "security-scan"
+  security-scan:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         env:
