--- a/.github/workflows/linter-with-autofix.yml
+++ b/.github/workflows/linter-with-autofix.yml
@@ -7,9 +7,9 @@ name: lint_and_fix
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on pull request events but only for the main branch
+  # Triggers the workflow on pull request events for the 'not_main' branch
   pull_request:
-    branches: [ main ]
+    branches: [ not_main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
