--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -6,9 +6,9 @@ name: linter
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on pull request events but only for the main branch
+  # Triggers the workflow on pull request events for the 'not_main' branch
   pull_request:
-    branches: [ main ]
+    branches: [ not_main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
